# continuallearning

./: .dockerignore  .gitignore  ARCHITECTURAL.md  Dockerfile  README.md  dino-game.js  docker-compose.yml  pyproject.toml  tools.py  train.py  tui.py
checkpoints/auto-sdpo/: metrics.jsonl  problem_difficulty.jsonl  samples.jsonl
checkpoints/auto-sdpo-30b/: metrics.jsonl  samples.jsonl
continualcode/: __init__.py  __main__.py  cli.py  profiles.py  tools.py  train.py  tui.py  web.py  workflows.py
continualcode/benchmarks/: __init__.py  auto_train.py  lcb_eval.py
continualcode/web_static/: app.js  index.html  styles.css
demo/: README.md  VIDEO_PROMPTS.txt  main.py  test_main.py
docs/: deployment.md  design.md  index.html
examples/: dpo_preferences.jsonl  sft_examples.jsonl
wandb/: latest-run
wandb/run-20260208_010447-62o5d4iy/: run-62o5d4iy.wandb
wandb/run-20260208_010447-62o5d4iy/files/: wandb-metadata.json
wandb/run-20260208_022243-m8n281h3/: run-m8n281h3.wandb
wandb/run-20260208_022243-m8n281h3/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20260208_023319-0h3falqm/: run-0h3falqm.wandb
wandb/run-20260208_023319-0h3falqm/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20260208_024255-qn20gx7r/: run-qn20gx7r.wandb
wandb/run-20260208_024255-qn20gx7r/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20260208_030531-abh1wn9l/files/: wandb-metadata.json
wandb/run-20260208_035318-3zsm0hg3/files/: wandb-metadata.json
wandb/run-20260208_041358-caqtx8fd/files/: wandb-metadata.json
wandb/run-20260208_041800-v30cbzbs/: run-v30cbzbs.wandb
wandb/run-20260208_041800-v30cbzbs/files/: wandb-metadata.json
wandb/run-20260208_043345-xx82j9wz/: run-xx82j9wz.wandb
wandb/run-20260208_043345-xx82j9wz/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20260208_092936-q03ri0o7/: run-q03ri0o7.wandb
wandb/run-20260208_092936-q03ri0o7/files/: requirements.txt  wandb-metadata.json
wandb/run-20260208_093008-lhvbb2c9/: run-lhvbb2c9.wandb
wandb/run-20260208_093008-lhvbb2c9/files/: wandb-metadata.json
